--- a/style.css
+++ b/style.css
@@ -1,72 +1,100 @@
 *{
   margin:0;
 }
-a{
-  text-decoration: none;
-}
-a:link{
-  color:white;
-}
-a:visited{
-  color:purple;
-}
-a:hover{
-  text-decoration: underline;
-}
-a:active{
-  color:blue;
-}
-#first{
-  text-decoration:  underline;
-   color:white;
-}
+
   .container{
     display: grid;
-    grid-template-columns: 1fr 2fr ;
-    grid-template-rows: 180px 150px 1fr;
+    grid-template-columns: 100px 200px 1fr ;
+    grid-template-rows: 180px 1fr;
+    }
+    #button{
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row-start: 1;
+      grid-row-end: 2;
+      background-image:none;
+      filter: grayscale(0%);
+      padding: 20px;
+      padding-top: 48px;
+      padding-left: 48px;
     }
   .subject{
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 2;
     padding-bottom:10;
     margin:0;
+    width:100%;
+    padding:10px;
+    color: white;
+    font-size:50px;
+    text-align:center;
     background-image:url('bg.jpg');
     filter: grayscale(100%);
+  }
 
+  .main-list{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    padding-right: 500px;
+    padding-left: 500px;
+    padding-top: 80px;
+    font-size: 25px;
+    text-align: center;
   }
   .list{
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 2;
-    grid-row-end: 3;
-    padding-right: 620px;
-    padding-left: 620px;
-    padding-top: 50;
-    padding-bottom: 0;
-    font-size: 22px;
+    grid-row-end: 4;
+    padding-top: 100PX;
+    padding-right:0px;
+    padding-left:20px;
+    font-size: 18px;
     list-style:square;
-    border-bottom: 2px grey solid;
-    text-align: center;
+    border-right: 1px grey solid;
+    text-align: left;
   }
   .article{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 3;
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 2;
     grid-row-end: 4;
+    padding:30px;
   }
-  .article2{
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 4;
-  }
+
   @media(max-width:800px){
     #grid{
       display: block;
     }
-    ol{
+    #button{
+      padding: 0px;
+      padding-top: 20px;
+      padding-left: 10px;
+    }
+    .container{
+      display: grid;
+      grid-template-columns: 30px 170px 1fr ;
+      grid-template-rows: 180px 1fr;
+      }
+    .subject{
+      padding-bottom:0px;
+      margin:0px;
+      font-size: 40px;
+    }
+    .main-list{
+      padding-right: 200px;
+      padding-left: 200px;
+      padding-top: 30px;
+      font-size: 15px;
+      text-align: center;
+    }
+    .list {
       border-right: none;
+      font-size: 18px;
+      padding: 0px;
     }
   }
